--- a/One/appsettings.json
+++ b/One/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CoffeeContext": "Server=(localdb)\\mssqllocaldb;Database=CoffeeContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
